[package]
name = "rusty_planner"
version = "0.1.3"
authors = ["tmetsch"]
edition = "2018"
description = "Artificial intelligence planning & reasoning library for Rust."
license-file = "LICENSE"
repository = "https://github.com/tmetsch/rusty_planner/"
categories = ["algorithms", "science"]
keywords = ["ai", "planning", "reasoning"]

[features]
multi_agent = ["dep:rusty_agent"]
random = ["dep:rand"]

[dependencies]
rusty_agent = {version="~0.1.0", optional = true}
rand = {version = "~0.8.5", optional = true}

[[example]]
name = "example_0"
path = "examples/example_0.rs"

[[example]]
name = "example_1"
path = "examples/example_1.rs"

[[example]]
name = "example_2"
path = "examples/example_2.rs"

[[example]]
name = "example_3"
path = "examples/example_3.rs"

[[example]]
name = "example_4"
path = "examples/example_4.rs"
required-features = ["multi_agent"]

[[example]]
name = "example_5"
path = "examples/example_5.rs"

[[example]]
name = "example_6"
path = "examples/example_6.rs"
required-features = ["random"]
